<resources>
    <string name="app_name">NoteStore</string>
    <string name="action_1">test</string>
    <string name="action_2">test</string>
    <string name="supporting_text">test</string>
    <string name="secondary_text">test</string>
    <string name="title">test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Synths</string>
    <string name="search">Search</string>
    <string name="page_title">Notestore</string>
    <string name="product_image_content_description">Product image</string>
    <string name="SamplePrice">$15</string>
    <string name="SampleProductName">PO-16</string>
    <string name="cart">Cart</string>
    <string name="nocables">No Cables</string>
    <string name="checkout">Checkout</string>
    <string name="cartClear">Clear Cart?</string>
    <string name="cartClearMessage">CLICK CANCEL TO GET BITCHES!!!!!!!!!!!!!</string>
    <string name="cartClearConfirm">Clear</string>
    <string name="cartClearCancel">Cancel</string>
    <string name="profile">Account</string>
    <string name="quantity">Quantity</string>
    <string name="userAdress">user</string>
    <string name="userId">userId</string>
    <string name="user_not_logged_in">You\'re not logged in????!??</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Register</string>
    <string name="user_not_logged_in_description">Register now and buy us much as you can end even more</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="phone_number">Phone number</string>
    <string name="log_out">log out</string>
    <string name="share">Share</string>
    <string name="whishlist">Whishlist</string>
    <string name="name_checkout">Name</string>
    <string name="price">Price</string>
</resources>