<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:transitionName="accountWrapperTransition"
    android:layout_height="match_parent"
    tools:context=".Account.AccountWrapper">
   <LinearLayout
       android:id="@+id/account_wrapper"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
       android:orientation="vertical"
      android:layout_marginTop="200dp">

        <TextView
            android:id="@+id/username_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account"
            android:textSize="30sp"

            />
         <Button
             android:id="@+id/log_out_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:text="@string/log_out"/>
   </LinearLayout>

   <LinearLayout
       android:id="@+id/userNotLoggedIn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="200dp"
       android:orientation="vertical">

      <TextView
          android:id="@+id/userNotLoggedInText"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/user_not_logged_in"

          android:textAlignment="center"
          android:textAppearance="?textAppearanceHeadlineSmall" />

      <TextView
          android:id="@+id/userNotLoggedInDescription"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginBottom="10dp"
          android:text="@string/user_not_logged_in_description"

          android:textAlignment="center"
          android:textAppearance="?textAppearanceBodyMedium"
          android:textColor="?colorOnSurfaceVariant" />

      <RelativeLayout
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center">

         <Button
             android:id="@+id/logInButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/log_in" />

         <Button
             android:id="@+id/signUpButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:text="@string/sign_up" />

      </RelativeLayout>


   </LinearLayout>

</FrameLayout>