<?xml version="1.0" encoding="utf-8"?>

    <com.google.android.material.card.MaterialCardView
    android:layout_margin="8dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/product_card"
            android:layout_width="match_parent"
    android:transitionName="cardToProduct"
        android:focusable="true"
        android:clickable="true"
            
            android:layout_height="wrap_content"
        style="@style/Widget.Material3.CardView.Filled">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.CardView.Filled"
                    >
                <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">
                    <ImageView
                            android:id="@+id/image_product_card"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_launcher_background"
                            android:contentDescription="@string/product_image_content_description">
                    </ImageView>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">
                <TextView
                        android:id="@+id/product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SampleProductName"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                    />
                <TextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/SamplePrice"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:textColor="?android:attr/textColorSecondary"
                        />



            </LinearLayout>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
